feat: add call credit strategy api
